manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: true
  name: leapfrog-ui
