manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leapfrogai-ui
  namespace: leapfrogai
spec:
  selector:
    matchLabels:
      app: leapfrogai-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: leapfrogai-ui
    spec:
      containers:
        - name: leapfrogai-ui
          image: ghcr.io/defenseunicorns/leapfrogai/leapfrogai-ui:0.3.4
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "5Gi"
              cpu: "500m"
            limits:
              memory: "5Gi"
              cpu: "1000m"
