manifests/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: leapfrogai-ui
  namespace: leapfrogai
spec:
  gateways:
    - istio-system/leapfrogai
  hosts:
    - "*"
  http:
   - match:
     - uri:
         prefix: "###ZARF_VAR_PREFIX###/"
     rewrite:
       uri: "/"
     route:
     - destination:
        host: leapfrogai-ui.leapfrogai.svc.cluster.local
        port:
          number: 3000
  # see https://github.com/istio/istio/issues/8076#issuecomment-427057691 for redirect setup and rationale
   - match:
       - uri:
           prefix: "###ZARF_VAR_PREFIX###"
     redirect:
       uri: "###ZARF_VAR_PREFIX###/"
